<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffd966"
    tools:context=".cosaso">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <Button
        android:onClick="click_añadir"
        android:layout_width="200sp"
        android:layout_height="64sp"
        android:text="@string/opc1"
        android:layout_marginTop="100sp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#ff99cc"
        />
    <Button
        android:onClick="click_revisar"
        android:layout_width="200sp"
        android:layout_height="64sp"
        android:text="@string/opc2"
        android:layout_marginTop="30sp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#ff99cc"
        />
    <Button
        android:onClick="click_editar"
        android:layout_width="200sp"
        android:layout_height="64sp"
        android:text="@string/opc3"
        android:layout_marginTop="30sp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#ff99cc"
        />
    <Button
        android:onClick="click_salir"
        android:layout_width="200sp"
        android:layout_height="64sp"
        android:text="@string/opc4"
        android:layout_marginTop="30sp"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="#ff99cc"
        />
</LinearLayout>