<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffd966"
    tools:context=".anade">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <LinearLayout
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="#ff99cc"
        >
        <EditText
            android:id="@+id/nombredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginLeft="30sp"
            android:hint="@string/nom"
            android:textSize="30sp"
            />
        <EditText
            android:id="@+id/apellido1dit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_gravity="center_horizontal"
            android:hint="@string/ape"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            />

        <EditText
            android:id="@+id/apellido2dit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_gravity="center_horizontal"
            android:hint="@string/ape"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="#ff99cc"
        >
        <EditText
            android:id="@+id/telefonodit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginLeft="140sp"
            android:hint="@string/tel"
            android:textSize="30sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="#ff99cc"
        >
        <EditText
            android:id="@+id/numcasadit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_marginLeft="40sp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/num"
            android:inputType="numberDecimal"
            android:textSize="30sp"
            />
        <EditText
            android:id="@+id/calledit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_gravity="center_horizontal"
            android:hint="@string/cal"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            />
        <EditText
            android:id="@+id/preciodit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:hint="@string/pre"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="380sp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="#ff99cc"
        >
        <EditText
            android:id="@+id/productodit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_gravity="center_horizontal"
            android:hint="@string/man"
            android:layout_marginLeft="0sp"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            />
        <EditText
            android:id="@+id/cantidaddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:hint="@string/canti"
            android:textSize="30sp"
            android:layout_marginTop="10sp"
            />
        <EditText
            android:id="@+id/metododit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_gravity="center_horizontal"
            android:hint="@string/meti"
            android:textSize="21sp"
            android:layout_marginTop="10sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="380sp"
        android:layout_height="80sp"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:background="#ff99cc"
        >
        <Spinner
            android:id="@+id/spinirillodit"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        >

        <ImageButton
            android:id="@+id/anterior"
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:src="@drawable/izquiaaha"
            android:layout_marginTop="10sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#8faadc"
            />

        <Button
            android:id="@+id/guardabut"
            android:layout_width="200sp"
            android:layout_height="64sp"
            android:text="@string/guarda"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="20sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#8faadc"
            />

        <ImageButton
            android:id="@+id/siguiente"
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:src="@drawable/derchaha"
            android:layout_marginTop="10sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#8faadc"
            />

    </LinearLayout>
</LinearLayout>