<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffd966"
    tools:context=".informacion">
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="410dp"
        android:orientation="vertical"
        android:backgroundTint="#ff99cc"
        android:layout_margin="30dp"
        >
        <LinearLayout
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            >
            <TextView
                android:id="@+id/nombresote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_marginLeft="30sp"
                android:hint="@string/nom"
                android:textSize="30sp"
                />
            <TextView
                android:id="@+id/apellidote1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10sp"
                android:hint="@string/ape"
                android:textSize="30sp"
                android:layout_marginTop="30sp"
                />

            <TextView
                android:id="@+id/apellidote2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center_horizontal"
                android:hint="@string/ape"
                android:textSize="30sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="90sp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="#ff99cc"
            >
            <TextView
                android:id="@+id/telefonsote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_marginLeft="140sp"
                android:hint="@string/tel"
                android:textSize="30sp"
                android:layout_marginBottom="30sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="160sp"
            >
            <TextView
                android:id="@+id/numcasota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_marginLeft="30sp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/num"
                android:textSize="30sp"
                />
            <TextView
                android:id="@+id/callesota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center_horizontal"
                android:hint="@string/cal"
                android:textSize="30sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"
                />

            <TextView
                android:id="@+id/totalota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center_horizontal"
                android:hint="@string/pre"
                android:textSize="30sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="220sp"
            >
            <TextView
                android:id="@+id/productote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_marginLeft="15sp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/man"
                android:textSize="30sp"
                />
            <TextView
                android:id="@+id/cantidota"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center_horizontal"
                android:hint="@string/canti"
                android:textSize="30sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"
                />

            <TextView
                android:id="@+id/metodote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center_horizontal"
                android:hint="@string/meti"
                android:textSize="30sp"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="30sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:background="#ff99cc"
            android:layout_marginTop="280sp"
            >
            <TextView
                android:id="@+id/textote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="120sp"
                android:hint="@string/proc"
                android:textSize="30sp"
                android:layout_marginTop="10sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="380sp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="340sp"
            >
        <ImageButton
            android:id="@+id/llama"
            android:layout_width="64sp"
            android:layout_height="64sp"
            android:src="@drawable/llamamdmam"
            android:layout_marginTop="270sp"
            android:layout_marginLeft="80sp"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#8faadc"
            />
            <ImageButton
                android:onClick="click_borra"
                android:layout_width="64sp"
                android:layout_height="64sp"
                android:src="@drawable/basurerito"
                android:layout_marginTop="270sp"
                android:layout_marginLeft="100sp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="#8faadc"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>